--- a/package.json
+++ b/package.json
@@ -6,13 +6,23 @@
   "dependencies": {
     "@types/jasmine": "^2.8.8",
     "jasmine": "^3.2.0",
-    "protractor": "^5.4.1",
-    "typescript": "^3.0.3"
+    "typescript": "^3.0.3",
+    "protractor": "^7.0.0",
+    "jasmine-allure-reporter": "^1.0.2"
   },
   "scripts": {
     "start": "webdriver-manager update && webdriver-manager start",
-     "test": "protractor Configuration.js"
+    "test": "protractor Configuration.js"
   },
   "author": "test",
-  "license": "UNLICENSED"
+  "license": "UNLICENSED",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/shantiswarooppreddy/protractor.git"
+  },
+  "bugs": {
+    "url": "https://github.com/shantiswarooppreddy/protractor/issues"
+  },
+  "homepage": "https://github.com/shantiswarooppreddy/protractor#readme"
 }
