--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "jasmine": "^3.2.0",
     "typescript": "^3.0.3",
     "protractor": "^7.0.0",
-    "jasmine-allure-reporter": "^1.0.2"
+    "jasmine-allure-reporter": "^1.0.2",
+    "protractor-jasmine2-html-reporter": "^0.0.7",
+    "jasmine-data-provider": "^2.2.0"
   },
   "scripts": {
     "start": "webdriver-manager update && webdriver-manager start",
-    "test": "protractor Configuration.js"
+    "test": "protractor Configuration.js",
+    "test1": "protractor Configuration.js --suite=Regression"
   },
   "author": "test",
   "license": "UNLICENSED",
